# Huffman

./: CMakeLists.txt  Huffman.c  Huffman.h  bitarray.c  bitarray.h  main.c  sortlist.c  sortlist.h
